--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -7,8 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="178dp"
-        android:layout_height="40dp"
+        android:layout_width="226dp"
+        android:layout_height="144dp"
         android:layout_gravity="center"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
@@ -20,12 +20,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.114">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
+            <TextView
             android:id="@+id/gridview_item_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="card view"
             android:textSize="25dp" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginHorizontal="20dp"-->
+<!--                android:layout_marginTop="10dp">-->
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/minus_icon"-->
+<!--                android:layout_width="52dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:icon="@drawable/ic_baseline_remove_circle_outline_24"-->
+<!--                android:layout_marginHorizontal="8dp"/>-->
+
+<!--                <com.google.android.material.button.MaterialButton-->
+<!--                    android:id="@+id/minus_icon"-->
+<!--                    android:layout_width="52dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:icon="@drawable/ic_baseline_add_circle_outline_24" />-->
+<!--            </LinearLayout>-->
+        </LinearLayout>
+
+
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
