--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -7,49 +7,51 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="226dp"
-        android:layout_height="144dp"
+        android:layout_width="123dp"
+        android:layout_height="91dp"
         android:layout_gravity="center"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="1dp"
         android:elevation="5dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.114">
+        app:layout_constraintVertical_bias="0.062">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-            android:id="@+id/gridview_item_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="card view"
-            android:textSize="25dp" />
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_marginHorizontal="20dp"-->
-<!--                android:layout_marginTop="10dp">-->
-<!--            <com.google.android.material.button.MaterialButton-->
-<!--                android:id="@+id/minus_icon"-->
-<!--                android:layout_width="52dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:icon="@drawable/ic_baseline_remove_circle_outline_24"-->
-<!--                android:layout_marginHorizontal="8dp"/>-->
+                android:id="@+id/gridview_item_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="card view"
+                android:textSize="25dp" />
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:orientation="horizontal"-->
+            <!--                android:layout_marginHorizontal="20dp"-->
+            <!--                android:layout_marginTop="10dp">-->
+            <!--            <com.google.android.material.button.MaterialButton-->
+            <!--                android:id="@+id/minus_icon"-->
+            <!--                android:layout_width="52dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                app:icon="@drawable/ic_baseline_remove_circle_outline_24"-->
+            <!--                android:layout_marginHorizontal="8dp"/>-->
 
-<!--                <com.google.android.material.button.MaterialButton-->
-<!--                    android:id="@+id/minus_icon"-->
-<!--                    android:layout_width="52dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:icon="@drawable/ic_baseline_add_circle_outline_24" />-->
-<!--            </LinearLayout>-->
+            <!--                <com.google.android.material.button.MaterialButton-->
+            <!--                    android:id="@+id/minus_icon"-->
+            <!--                    android:layout_width="52dp"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    app:icon="@drawable/ic_baseline_add_circle_outline_24" />-->
+            <!--            </LinearLayout>-->
         </LinearLayout>
 
 
