--- a/app/src/main/res/layout/activity_add_item_ui.xml
+++ b/app/src/main/res/layout/activity_add_item_ui.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
         android:layout_marginTop="69dp"
+        android:layout_marginBottom="59dp"
         android:text="Add an Item"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +36,7 @@
         android:id="@+id/editTextItemDescr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="description"
         android:inputType="textPersonName"
@@ -45,8 +47,8 @@
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="12dp"
         android:text="Submit"
         app:layout_constraintEnd_toEndOf="@+id/editTextItemDescr"
         app:layout_constraintTop_toBottomOf="@+id/editTextItemDescr" />
@@ -55,9 +57,36 @@
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18dp"
+        android:layout_marginEnd="16dp"
         android:text="Cancel"
         app:layout_constraintBaseline_toBaselineOf="@+id/submit_button"
         app:layout_constraintEnd_toStartOf="@+id/submit_button" />
+
+    <EditText
+        android:id="@+id/editTextPrice"
+        android:layout_width="213dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="132dp"
+        android:ems="10"
+
+        android:hint="price"
+
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextItemDescr" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="214dp"
+        android:layout_height="35dp"
+        app:layout_constraintBottom_toTopOf="@+id/submit_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.335"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPrice"
+        app:layout_constraintVertical_bias="0.513"
+        android:entries="@array/conditionarr"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
