--- a/app/src/main/res/layout/activity_add_item_ui.xml
+++ b/app/src/main/res/layout/activity_add_item_ui.xml
@@ -10,14 +10,15 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="69dp"
         android:layout_marginBottom="59dp"
         android:text="Add an Item"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/spinner2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.159" />
 
     <EditText
         android:id="@+id/editTextItemName"
