--- a/app/src/main/res/layout/gridview_item2.xml
+++ b/app/src/main/res/layout/gridview_item2.xml
@@ -40,6 +40,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/gridview_item_image"
                 android:layout_width="93dp"
                 android:layout_height="52dp"
                 android:layout_marginStart="15dp"
@@ -47,11 +48,13 @@
                 android:src="@drawable/ic_baseline_image_24" />
 
             <TextView
+                android:id="@+id/gridview_item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description" />
 
             <TextView
+                android:id="@+id/gridview_item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price" />
