--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -7,9 +7,20 @@
     tools:context=".ItemsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="buy items fragment" />
+    <GridView
+        android:id="@+id/fragment_itemsgridview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        android:horizontalSpacing="6dp"
+        android:numColumns="2"
+        android:verticalSpacing="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintVertical_bias="0.031" />
 
 </FrameLayout>
