--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -4,11 +4,11 @@
 
     <item android:title="Home" android:id="@+id/home_id"/>
 
-    <item android:title="Buy Services" android:id="@+id/buy_services_id"/>
-    <item android:title="Sell Items" android:id="@+id/sell_items_id"/>
-    <item android:title="Sell Services" android:id="@+id/sell_services_id"/>
-    <item android:title="Item Categories" android:id="@+id/item_categories_id"/>
-    <item android:title="buy items" android:id="@+id/buy_items_id"/>
+<!--    <item android:title="Buy Services" android:id="@+id/buy_services_id"/>-->
+<!--    <item android:title="Sell Items" android:id="@+id/sell_items_id"/>-->
+<!--    <item android:title="Sell Services" android:id="@+id/sell_services_id"/>-->
+<!--    <item android:title="Item Categories" android:id="@+id/item_categories_id"/>-->
+<!--    <item android:title="buy items" android:id="@+id/buy_items_id"/>-->
 
     <item android:title="items" android:id="@+id/items">
         <menu>
