--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -24,4 +24,5 @@
             <item android:title="add service" android:id="@+id/add_service"/>
         </menu>
     </item>
+    <item android:title="sign out" android:id="@+id/signout"/>
 </menu>
